# esoinncpp

./: .gitignore  README.md
gui-debug/: CMakeLists.txt  main.cpp
gui-debug/data/: nodesmodel.cpp  nodesmodel.h  ocidataset.cpp
gui-debug/ui/: mainform.cpp  mainform.h  mainform.ui
lib/: CMakeLists.txt  esoinncppConfig.cmake
lib/include/: esoinn.h  esoinn_export.h
lib/src/: esoinn.cpp  esoinn_node.cpp  esoinn_node.h  utils.h
tests/: CMakeLists.txt  filter.cpp  filter.h  kaggleparser.cpp  kaggleparser.h  main.cpp  ocidataset.cpp  ocidataset.h  ocimain.cpp
